--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Welcome to OpenShift</title>
+  <title>Microservices Protorype</title>
 
 <style>
 
@@ -209,24 +209,99 @@
 
  <section class='container'>
   <hgroup>
-    <h1>Welcome to your static httpd application on OpenShift</h1>
+    <h1>Welcome to the microservices prototype application</h1>
   </hgroup>
   <div class="row">
     <section class='col-xs-12 col-sm-6 col-md-6'>
       <section>
-        <h2>Deploying code changes</h2>
-          <p>To change this application, update your code and rebuild/redeploy the image.</p>
+        <h2>AD Data</h2>
+          <p>
+		  <?php
+$host    = "localhost";
+$user    = "username_here";
+$pass    = "password_here";
+$db_name = "database_name_here";
+
+//create connection
+$connection = mysqli_connect($host, $user, $pass, $db_name);
+
+//test if connection failed
+if(mysqli_connect_errno()){
+    die("connection failed: "
+        . mysqli_connect_error()
+        . " (" . mysqli_connect_errno()
+        . ")");
+}
+
+//get results from database
+$result = mysqli_query($connection,"SELECT * FROM products");
+$all_property = array();  //declare an array for saving property
+
+//showing property
+echo "<table class="data-table">
+        <tr class="data-heading">";  //initialize table tag
+while ($property = mysqli_fetch_field($result)) {
+    echo "<td>" . $property->name . "</td>";  //get field name for header
+    array_push($all_property, $property->name);  //save those to array
+}
+echo "</tr>"; //end tr tag
+
+//showing all data
+while ($row = mysqli_fetch_array($result)) {
+    echo "<tr>";
+    foreach ($all_property as $item) {
+        echo "<td>" . $row[$item] . "</td>"; //get items using property value
+    }
+    echo "</tr>";
+}
+echo "</table>";
+?> </p>
+
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
-      <h3>For more information and help</h3>
-      <ul>
-        <li><a href="https://developers.openshift.com">Developer Center</a></li>
-        <li><a href="https://docs.openshift.com">Documentation</a></li>
-        <li><a href="https://www.openshift.com/forums/openshift">OpenShift forums</a></li>
-        <li><a href="http://stackoverflow.com/questions/tagged/openshift">Stack Overflow questions for OpenShift</a></li>
-        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li>
-      </ul>
+      <h2>Your data</h2>
+		<p>
+		  <?php
+$host    = "localhost";
+$user    = "username_here";
+$pass    = "password_here";
+$db_name = "database_name_here";
+
+//create connection
+$connection = mysqli_connect($host, $user, $pass, $db_name);
+
+//test if connection failed
+if(mysqli_connect_errno()){
+    die("connection failed: "
+        . mysqli_connect_error()
+        . " (" . mysqli_connect_errno()
+        . ")");
+}
+
+//get results from database
+$result = mysqli_query($connection,"SELECT * FROM products");
+$all_property = array();  //declare an array for saving property
+
+//showing property
+echo "<table class="data-table">
+        <tr class="data-heading">";  //initialize table tag
+while ($property = mysqli_fetch_field($result)) {
+    echo "<td>" . $property->name . "</td>";  //get field name for header
+    array_push($all_property, $property->name);  //save those to array
+}
+echo "</tr>"; //end tr tag
+
+//showing all data
+while ($row = mysqli_fetch_array($result)) {
+    echo "<tr>";
+    foreach ($all_property as $item) {
+        echo "<td>" . $row[$item] . "</td>"; //get items using property value
+    }
+    echo "</tr>";
+}
+echo "</table>";
+?> </p>
     </section>
   </div> 
   <footer>
